--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
     catcher.position.set(0, 0, -1);
     scene.add(catcher);
 
-    // Визуальный индикатор области захвата (полупрозрачный круг внутри ловушки)
+    // Визуальный индикатор области захвата (полупрозрачный круг)
     const catcherAreaGeometry = new THREE.CircleGeometry(0.2, 32);
     const catcherAreaMaterial = new THREE.MeshBasicMaterial({ color: 0x00FF00, transparent: true, opacity: 0.3 });
     const catcherArea = new THREE.Mesh(catcherAreaGeometry, catcherAreaMaterial);
     catcherArea.position.set(0, 0, -1);
-    catcherArea.rotation.x = -Math.PI / 2; // Поворачиваем круг, чтобы он был перпендикулярен камере
+    catcherArea.rotation.x = -Math.PI / 2;
     scene.add(catcherArea);
 
     // Массив звёзд
@@ -184,7 +184,7 @@
     let isHandClosed = false;
     let targetX = 0;
     let targetY = 0;
-    const smoothingFactor = 0.2; // Увеличиваем для более быстрого движения
+    const smoothingFactor = 0.2;
 
     hands.onResults((results) => {
       ctx.save();
@@ -207,7 +207,14 @@
           const distance = Math.sqrt(
             Math.pow(thumbTip.x - indexTip.x, 2) + Math.pow(thumbTip.y - indexTip.y, 2)
           );
-          isHandClosed = distance < 0.15;
+          isHandClosed = distance < 0.2; // Увеличили порог
+
+          // Визуальный эффект: меняем цвет ловушки, когда жест захвата активен
+          if (isHandClosed) {
+            catcherMaterial.color.setHex(0xFFFF00); // Жёлтый
+          } else {
+            catcherMaterial.color.setHex(0x00FF00); // Зелёный
+          }
 
           // Управление размером ловушки
           if (distance > 0.3) {
@@ -219,7 +226,7 @@
           const currentScale = catcher.scale.x;
           const newScale = currentScale + (targetScale - currentScale) * scaleSmoothingFactor;
           catcher.scale.set(newScale, newScale, newScale);
-          catcherArea.scale.set(newScale, newScale, newScale); // Масштабируем индикатор области
+          catcherArea.scale.set(newScale, newScale, newScale);
 
           // Используем кончик указательного пальца (точка 8)
           const handX = 1 - landmarks[8].x;
@@ -249,9 +256,8 @@
                 Math.pow(star.mesh.position.y - catcher.position.y, 2)
               );
               const distZ = Math.abs(star.mesh.position.z - catcher.position.z);
-              const catcherRadius = 0.3 * catcher.scale.x; // Увеличиваем базовый радиус
+              const catcherRadius = 0.4 * catcher.scale.x; // Увеличили радиус
 
-              // Проверяем столкновение в 2D и по оси Z
               if (distXY < catcherRadius + 0.1 && distZ < 0.5) {
                 scene.remove(star.mesh);
                 stars.splice(index, 1);
